# holdings_tracker_desktop

./: .gitignore  README.md  alembic.ini  pyproject.toml
src/holdings_tracker_desktop/: config.py  main.py
src/holdings_tracker_desktop/alembic/: env.py
src/holdings_tracker_desktop/alembic/versions/: 001_create_countries.py  002_create_currencies.py  003_create_asset_types.py  004_create_brokers.py  005_create_asset_sectors.py  006_create_assets.py  007_create_asset_events.py  008_create_asset_ticker_histories.py  009_create_broker_notes.py  010_create_position_snapshots.py  1319f6073c95_create_currencies.py  51a8ef30be1d_initial.py  54e568e540d4_create_position_snapshots.py  5e9f6cf6a1f1_create_asset_ticker_histories.py  638496e9bb9d_initial.py  83f0e1f51f34_create_broker_notes.py  84fc8bf13efc_create_assets.py  85c385415879_create_brokers.py  9c47a83ec32b_create_asset_types.py  b41afe708661_create_countries.py  b5dc34cb1199_create_asset_events.py  be625c34b84c_initial.py  c08d1e9fb28f_create_asset_sectors.py  d204c7c5bea5_initial.py
src/holdings_tracker_desktop/database/: __init__.py  database.py  migrate.py
src/holdings_tracker_desktop/database/scripts/: migrate.py  seed.py  setup_db.py
src/holdings_tracker_desktop/models/: __init__.py  asset.py  asset_event.py  asset_sector.py  asset_ticker_history.py  asset_type.py  base.py  broker.py  broker_note.py  country.py  currency.py  position_snapshot.py
src/holdings_tracker_desktop/repositories/: base.py  base_repository.py
src/holdings_tracker_desktop/schemas/: asset.py  asset_event.py  asset_sector.py  asset_ticker_history.py  asset_type.py  base.py  broker.py  broker_note.py  country.py  currency.py  position_snapshot.py
src/holdings_tracker_desktop/services/: asset_event_service.py  asset_sector_service.py  asset_service.py  asset_ticker_history_service.py  asset_type_service.py  broker_note_service.py  broker_service.py  country_service.py  currency_service.py  position_snapshot_service.py
src/holdings_tracker_desktop/ui/: confirm_dialog.py  formatters.py  global_signals.py  main_window.py  translations.py  ui_helpers.py
src/holdings_tracker_desktop/utils/: exceptions.py
(+56 files in other folders)
