[project]
name = "holdings-tracker-desktop"
version = "0.1.0"
description = "Desktop application for tracking investment holdings."
authors = [
    {name = "Marco Aurélio Camargo Oliveira", email = "macamargooliveira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "alembic (>=1.17.2,<2.0.0)",
    "pyside6 (>=6.10.1,<7.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "qtawesome (>=1.4.0,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)"
]

[tool.poetry]
packages = [{include = "holdings_tracker_desktop", from = "src"}]
include = ["src/holdings_tracker_desktop/ui/flags/*.svg"]

[tool.poetry.scripts]
app = "holdings_tracker_desktop.main:main"
migrations = "holdings_tracker_desktop.database.migrate:run_migrations"
seeds = "holdings_tracker_desktop.database.scripts.seed:run_seeds"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
